--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ timezone: 'Asia/Shanghai'
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
-url: http://yoursite.com
+url: http://chenchunyang.site
 root: /
 permalink: :year/:month/:day/:title/
 permalink_defaults:
@@ -55,7 +55,7 @@ highlight:
 # order_by: Posts order. (Order by date descending by default)
 index_generator:
     path: ''
-    per_page: 10
+    per_page: 5
     order_by: -date
 
 # Category & Tag
@@ -78,7 +78,7 @@ use_date_for_updated: false
 
 # Pagination
 ## Set per_page to 0 to disable pagination
-per_page: 10
+per_page: 5
 pagination_dir: page
 
 # Include / Exclude file(s)
@@ -96,7 +96,29 @@ theme: material-x
 ## Docs: https://hexo.io/docs/deployment.html
 deploy:
     type: git
-    repository: git@github.com:chenchunyang123/chenchunyang123.github.io.git
+    repository:
+        github: git@github.com:chenchunyang123/chenchunyang123.github.io.git
+        coding: https://git.dev.tencent.com/chenchunyang123/chenchunyang123.coding.me.git
     branch: master
 
-favicon: https://cdn.jsdelivr.net/gh/xaoxuu/assets@master/favicon/favicon.ico
+favicon: http://chenchunyang123.coding.me/ico/fish.ico
+
+leancloud:
+    app_id: O0vzKX7iGrqsq8iKA7sLobxk-gzGzoHsz
+    app_key: Tojf62ywgJehrlbT7hQvVgRm
+
+sitemap:
+    path: sitemap.xml
+
+word_count: true
+
+# Extensions
+## Plugins: http://hexo.io/plugins/
+#RSS订阅
+plugin:
+- hexo-generator-feed
+#Feed Atom
+feed:
+type: atom
+path: atom.xml
+limit: 20
