--- a/_config.yml
+++ b/_config.yml
@@ -4,12 +4,12 @@
 
 # Site
 title: 一条放了盐的鱼
-subtitle: 'web搬砖大师'
-description: '前端博客，笔记，解决方案'
-keywords:
-author: Chen
+subtitle: "web搬砖大师"
+description: "前端博客，笔记，解决方案"
+keywords: "信息教育，静态博客，coding、github博客，前端学习博客网站"
+author: 陈春阳
 language: zh-CN
-timezone: 'Asia/Shanghai'
+timezone: "Asia/Shanghai"
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
@@ -37,7 +37,7 @@ titlecase: false # Transform title into titlecase
 external_link:
     enable: true # Open external links in new tab
     field: site # Apply to the whole site
-    exclude: ''
+    exclude: ""
 filename_case: 0
 render_drafts: false
 post_asset_folder: false
@@ -47,14 +47,14 @@ highlight:
     enable: true
     line_number: true
     auto_detect: false
-    tab_replace: ''
+    tab_replace: ""
 
 # Home page setting
 # path: Root path for your blogs index page. (default = '')
 # per_page: Posts displayed per page. (0 = disable pagination)
 # order_by: Posts order. (Order by date descending by default)
 index_generator:
-    path: ''
+    path: ""
     per_page: 5
     order_by: -date
 
